--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
         <form action="/generate" method = "POST" enctype = "multipart/form-data">
           <label>Enter Mobile Number: </label>
           <input id="username" type="number" name="username">
+		<br>
+		<label>Upload Your Latest Downloded Certificate from COWIN website</label>
           <input id="imageinput" type="file" name="image">
           <button name="send" id = "sendbutton">Send</button>
         </form>
