--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,12 @@
         </form>
 			
 	</header>
+	<footer>
+		<h4>Idea By: Vishal Kumar Shaw</h4>
+		<h4>Developed By: Sanheen Sethi</h4>
+		<h5>MCA Department, NIT Kurukshetra</h5>
+		<p>@OpenSource, Deploy Code: <a href="https://github.com/sanheensethi/COVID_CARD_GENERATOR">Link</a>, Colab File:<a href="https://colab.research.google.com/drive/1l-mIFz9bNbnz4OAImNW3rz6egZwANFkN?usp=sharing">File Link</a></p>
+	</footer>
 </div>
 
 </body>
