--- a/templates/download.html
+++ b/templates/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>YOLO-Object Detection</title>
+	<title>Download</title>
 	<link rel="stylesheet" type="text/css" href="../static/index.css">
 	<script
 			  src="https://code.jquery.com/jquery-3.3.1.min.js"
